# 3d_next

./: .gitignore  5r5g4b_color.gce  Cargo.toml  README.md  build.rs  export.yaml  notes.md
assets/: blockbench.glb  charTest.glb  handrig.glb  mech.glb  multimesh.glb  vsBackground.glb
exporter/: Cargo.toml
exporter/src/: animations.rs  asset_list.rs  main.rs  meshes.rs  proc_meshes.rs  skeleton.rs  skin.rs  textures.rs
game/: Cargo.toml
game/src/: actor.rs  camera.rs  lib.rs  math.rs
game/src/animation/: animator.rs  mod.rs
game/src/assets/: mod.rs
game/src/graphics/: binner.rs  frame_buffer.rs  gpu.rs  mod.rs  rasterizer.rs  render_tile.rs  tile_manager.rs  z_buffer.rs
game/src/scenes/: blockbench.rs  cube.rs  cube_model.rs  cubes.rs  duck_model.rs  fox_model.rs  handrig.rs  helmet_model.rs  helmet_model_simple.rs  mechscene.rs  mod.rs  multimesh.rs  plane.rs  rigged_figure.rs  rigged_simple.rs  triangle.rs  vs_scene.rs
game/src/shaders/: mod.rs
game/src/shaders/pixel_shader/: color_blend.rs  helmet.rs  mod.rs  textured.rs
game/src/shaders/vertex_shader/: animated.rs  base.rs  mod.rs
shared/: Cargo.toml
shared/src/: animation.rs  lib.rs  mesh.rs  shapes.rs  skeleton.rs  skin.rs  texture.rs  types.rs  vertex_parameters.rs
src/: actor.rs  camera.rs  lib.rs  math.rs  shapes.rs  types.rs
src/animation/: animator.rs  mod.rs
src/assets/: mod.rs
src/graphics/: binner.rs  clipping.rs  frame_buffer.rs  gpu.rs  graphics_db.rs  mod.rs  rasterizer.rs  render_tile.rs  tile_manager.rs
src/scenes/: cube.rs  cube_model.rs  cubes.rs  duck_model.rs  fox_model.rs  helmet_model.rs  helmet_model_simple.rs  mod.rs  plane.rs  triangle.rs
src/shaders/: color_blend.rs  mod.rs  textured.rs
src/shaders/pixel_shader/: color_blend.rs  helmet.rs  mod.rs  textured.rs
src/shaders/vertex_shader/: base.rs  mod.rs
