[package]
name = "example_3d_next"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
wide = "0.7.15"
gamercade_rs = { path = "../gc_console/gamercade_rs" }

[build-dependencies]
image = "0.24.9"
gltf = "1.4.0"
glam = "0.25.0"
bytemuck = "1.14.3"

[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = 3
lto = true
codegen-units = 1