[package]
name = "example_3d_next"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.25.0", features = ["bytemuck"] }
bytemuck = { version = "1.14.3", features = ["derive", "min_const_generics"] }
wide = "0.7.15"
arrayvec = "0.7.4"
gamercade_rs = { path = "../gc_console/gamercade_rs" }

[build-dependencies]
image = "0.24.9"
gltf = "1.4.0"
glam = { version = "0.25.0", features = ["bytemuck"] }
bytemuck = "1.14.3"

[lib]
crate-type = ['cdylib']

# Codegen Units:
# 1: Slowest, Best Performance
# 16: Default Release
# 256: Default Debug
[profile.release]
opt-level = 3
lto = true
codegen-units = 256