[workspace]
resolver = "2"

members = [
    "exporter",
    "game",
    "shared"
]

# Codegen Units:
# 1: Slowest, Best Performance
# 16: Default Release
# 256: Default Debug

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.perf]
inherits = "release"
debug = true