[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
gamercade_rs = { path = "../../gc_console/gamercade_rs" }

glam = { version = "0.25.0", features = ["bytemuck"] }
bytemuck = { version = "1.14.3", features = ["derive", "min_const_generics"] }
wide = "0.7.15"
include_bytes_aligned = "0.1.3"
rkyv = { version = "0.7.44", default-features = false, features = ["size_32"]}

[lib]
crate-type = ['cdylib']

# Codegen Units:
# 1: Slowest, Best Performance
# 16: Default Release
# 256: Default Debug
[profile.release]
opt-level = 3
lto = true
codegen-units = 16